# calibration_analysis

./: .gitattributes  Bayesian_mixture_pystan.ipynb  G5K_non-regression-test.ipynb  G5K_pystan.ipynb  G5K_testing_changes.ipynb  Pipfile  README.md  extract_archive.py  extractor.py  flexmix_tentative.ipynb  non_regression_tests.py  process_all_g5k.py  pymc3_tentative.ipynb  pyproject.toml  pystan_example.ipynb  pystan_tentative.ipynb  stan_toy_hierarchical_normal.ipynb
bit_flips/: bit_flips.ipynb
dahu/blas/: blas_analysis.ipynb  calibration_fixed_K.ipynb  calibration_generation.ipynb  compute_regressions.py  dgemm_calibration.csv  dgemm_heterogeneous_model.ipynb  dgemm_mask_size.ipynb  dgemm_model.ipynb  dgemm_regression.ipynb  expfile_influence.ipynb  extraction_and_regression.ipynb  extraction_archives.ipynb  g5k_normality.ipynb  heterogeneity.ipynb  matrix_generation.ipynb  monitoring.ipynb  playing_with_mongodb.ipynb  playing_with_sqlite.ipynb  pystan_calibration.ipynb
dahu/hpl/: cluster_variability.ipynb  factorial_hpl.ipynb  geometry.ipynb  heterogeneity.ipynb  heterogeneity_trace.ipynb  hpl_blas_regression.ipynb  hpl_large.ipynb  hpl_performance.ipynb  hpl_performance_evolution.ipynb  hpl_performance_evolution_singlenode.ipynb  hpl_trace.ipynb  hpl_trace_dgemm.ipynb  hpl_trace_dgemm_comparison.ipynb  hpl_trace_dgemm_frequency.ipynb  hpl_trace_diff.ipynb  hpl_trace_simple.ipynb  partial_factorial_hpl.ipynb
dahu/memory/: memory_bandwidth.ipynb
dahu/mpi/: calibration.org  comparison_ring_classical.ipynb  comparison_smpi.ipynb  local_calibration.ipynb  proper_randomization.ipynb  pycewise_demo.ipynb  quick_calibration_visualization.ipynb  remote_calibration.ipynb  remote_calibration_adhoc.ipynb  remote_calibration_stan.ipynb  ring_experiment.ipynb  saturation.ipynb
dahu/smpi_hpl/: bug_search.ipynb  dgemm_generic_model.ipynb  dgemm_geometry_trace.ipynb  dgemm_model_generation.ipynb  dgemm_spatial_variability.ipynb  dgemm_synthetic_model.ipynb  dgemm_variability.ipynb  dgemm_variability_trace.ipynb  geometry.ipynb  hpl_factors.ipynb  hpl_simulation.ipynb  hpl_simulation_simple.ipynb  remove_nodes.ipynb  remove_switches.ipynb  scalability.ipynb  simple_geometry.ipynb  (+1 more)
grvingt/: grvingt_bimodal_mean.ipynb  grvingt_bimodal_mean2.ipynb  grvingt_mpi_calibration.ipynb  grvingt_proper_randomization.ipynb
paravance/: hpl_trace_dgemm.ipynb  hpl_trace_dgemm_comparison.ipynb
simdjson/: version.ipynb
(+127 files in other folders)
