[tool.poetry]
name = "mpi_calibration"
version = "0.1.0"
description = ""
authors = ["Tom Cornebize <tom.cornebize@univ-grenoble-alpes.fr>"]

[tool.poetry.dependencies]
python = "^3.7"
pytree = { git = "https://github.com/Ezibenroc/pytree.git", rev="daeffcbfbfb10dc9d69044bb110f965ab4e4e042" }
scipy = "< 1.3.0"
fabric = "^2.4"
colorlog = "^4.0"
pyyaml = "^5.1"
lxml = "^4.4"
statsmodels = "^0.10.1"
papermill = "^1.0"
jsonschema = "^3.0"
tables = "^3.5"
ipython = "^7.7"
jupyterlab = "^1.0"
plotnine = "^0.5.1"
seaborn = "^0.9.0"
cashew = { git = "https://github.com/Ezibenroc/cashew.git", rev="ca8a64e6735b60bc60c49342320befcdeaf55f90" }
rpy2 = "^3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
